[gd_scene load_steps=4 format=3 uid="uid://lriy17o7lrei"]

[ext_resource type="Script" path="res://Collection/card_collection.gd" id="1_k0xaa"]
[ext_resource type="Texture2D" uid="uid://c27205y3xo3ca" path="res://images/emptySpot.png" id="2_dwoyx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xin7e"]
size = Vector2(60, 59)

[node name="CardCollection" type="Node2D"]
script = ExtResource("1_k0xaa")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_xin7e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dwoyx")

[node name="AttackLabel" type="Label" parent="."]
offset_left = -42.0
offset_top = 12.0
offset_right = -2.0
offset_bottom = 35.0

[node name="HealthLabel" type="Label" parent="."]
offset_left = 36.0
offset_top = 13.0
offset_right = 76.0
offset_bottom = 36.0

[node name="LevelLabel" type="Label" parent="."]
offset_left = -4.0
offset_top = -46.0
offset_right = 21.0
offset_bottom = -23.0

[node name="NameLabel" type="Label" parent="."]
offset_left = -17.0
offset_top = 31.0
offset_right = 23.0
offset_bottom = 54.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
